Added temp login page

--- a/Backend/HVH/app/templates/index.html
+++ b/Backend/HVH/app/templates/index.html
@@ -80,5 +80,10 @@
         <circle class="dot" cx="100" cy="50" r="10" />
       </g>
     </svg>
+    <script>
+      setTimeout(() => {
+        window.location.href = "http://localhost:5000/login";
+      }, 3000);
+    </script>
   </body>
 </html>
