--- a/Backend/HVH/app/static/login.css
+++ b/Backend/HVH/app/static/login.css
@@ -30,6 +30,13 @@ body {
 .login-header h2 {
     color: #333;
     margin-bottom: 0.5rem;
+    color: #2fa5ef;
+}
+
+h1 {
+    color: #2fa5ef;
+    text-align: center;
+    margin-bottom: 2rem;
 }
 
 .login-header p {
@@ -49,7 +56,7 @@ body {
 .form-group input {
     width: 100%;
     padding: 0.8rem;
-    border: 1px solid #ddd;
+    border: 2px solid #d1c4e9;
     border-radius: 5px;
     transition: border-color 0.3s ease;
 }
