--- a/Backend/HVH/app/static/signup.css
+++ b/Backend/HVH/app/static/signup.css
@@ -11,9 +11,12 @@ body {
     justify-content: center;
     align-items: center;
     background: url(https://blog.digitalinfobytes.com/wp-content/uploads/2022/06/software-for-healthcare-organizations-2048x874.jpg);
-     
 }
 
+p {
+    margin: 0px;
+    padding: 0px;
+}
 .container {
     background-color: white;
     padding: 2rem;
@@ -33,7 +36,7 @@ h1 {
     margin-bottom: 1.5rem;
 }
 
-label {
+.input-group label {
     display: block;
     margin-bottom: 0.5rem;
     color: #2fa5ef;
@@ -76,7 +79,7 @@ button:hover {
 .links a {
     color: #2fa5ef;
     text-decoration: none;
-    margin: 0 1rem;
+    /* margin: 0 1rem; */
     transition: color 0.3s;
 }
 
@@ -111,4 +114,22 @@ button:hover {
 
 .success {
     animation: success 0.5s ease-in-out;
+}
+
+.remember-me {
+    display: flex;
+    margin-bottom: 1rem;
+    align-items: center;
+    width: 20%;
+}
+
+.remember-me input {
+    margin-right: 0.5rem;
+}
+
+.remember-me label {
+    color: #666;
+    margin-left: 0.5rem;
+    font-size: 0.9rem;
+    width: 10%;
 }
