Added more logic

--- a/Backend/HVH/app/templates/index.html
+++ b/Backend/HVH/app/templates/index.html
@@ -83,7 +83,8 @@
     <script>
       setTimeout(() => {
         // localStorage conditions
-        if (localStorage.getItem("LOGGED_IN") === "true") {
+
+        if (localStorage.getItem('LOGGED_IN') === "true") {
           window.location.href = "home/";
         } else {
           window.location.href = "login/";
