--- a/Backend/HVH/app/templates/signup.html
+++ b/Backend/HVH/app/templates/signup.html
@@ -43,10 +43,11 @@
             
             <button type="submit">Sign Up</button>
         </form>
+        <div id="signup-message"></div>
         
         <div class="links">
             <p>Already have an account? <a href="/login" id="login-link">Login</a></p>
-            <a href="#" id="forgot-password-link">Forgot Password?</a>
+            <a href="/forgot" id="forgot-password-link">Forgot Password?</a>
         </div>
     </div>
     <script src="{% static 'signup.js' %}"></script>
