--- a/Backend/HVH/app/templates/login.html
+++ b/Backend/HVH/app/templates/login.html
@@ -29,9 +29,10 @@
             </div>
             <button type="submit" class="submit-btn">Login</button>
         </form>
+        <div id="login-message"></div>
         <div class="additional-options">
             <p>Don't have an account? <a href="/signup" class="signup">Sign up</a></p>
-            <a href="#" class="forgot-password">Forgot Password?</a>
+            <a href="/forgot" class="forgot-password">Forgot Password?</a>
         </div>
     </div>
     <script src="{% static 'login.js' %}"></script>
