--- a/Backend/HVH/app/templates/baby_vaccine.html
+++ b/Backend/HVH/app/templates/baby_vaccine.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Child Vaccination Tracker</title>
-    <link rel="stylesheet" href="booking.css">
+    <link rel="stylesheet" href="{% static 'baby_vaccine.css' %}">
 </head>
 <body>
     <div class="container">
@@ -108,6 +109,6 @@
             </form>
         </div>
     </div>
-    <script src="booking.js"></script>
+    <script src="{% static 'baby_vaccine.js' %}"></script>
 </body>
 </html>
