--- a/Backend/HVH/app/templates/virtual_meet.html
+++ b/Backend/HVH/app/templates/virtual_meet.html
@@ -90,12 +90,12 @@
         <label for="doctor">Choose Doctor:</label>
         <select id="doctor" name="doctor" required>
           <option value="">Select Doctor</option>
-          <option value="Dr. Smith">--</option>
-          <option value="Dr. Brown">--</option>
-          <option value="Dr. Lee">--</option>
-          <option value="Dr. Smith">--</option>
-          <option value="Dr. Brown">--</option>
-          <option value="Dr. Lee">--</option>
+          <option value="Dr. Sreehari">Dr. Sreehari</option>
+          <option value="Dr. Seetha">Dr. Seetha</option>
+          <option value="Dr. Pavitra">Dr. Pavitra</option>
+          <option value="Dr. Sreedev">Dr. Sreedev</option>
+          {% comment %} <option value="Dr. Brown">Dr. </option>
+          <option value="Dr. Lee">Dr. </option> {% endcomment %}
         </select>
       </div>
 
