--- a/Backend/HVH/app/templates/profile.html
+++ b/Backend/HVH/app/templates/profile.html
@@ -98,9 +98,9 @@
 
         <div class="profile-section">
             <h2>Basic Information</h2>
-            <p><strong>Name:</strong></p>
-            <p><strong>Age:</strong></p>
-            <p><strong>Gender:</strong></p>
+            <p class="name"><strong>Name:</strong></p>
+            <p class="age"><strong>Age:</strong></p>
+            <p class="gender"><strong>Gender:</strong></p>
         </div>
 
         <div class="profile-section">
